<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Calculatrice</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_classique">Mode classique</string>
    <string name="menu_clavier">Mode clavier</string>
    <string name="app_name">ExamenFinal</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!--    String used for calculate -->
    <string name="buttonBack">Back</string>
    <string name="buttonNegatif">+/-</string>
    <string name="buttonAC">AC</string>
    <string name="buttonPourcent">%</string>
    <string name="buttonDivision">/</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonMultiplication">*</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="buttonSoustraction">-</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="buttonAddition">+</string>
    <string name="button0">0</string>
    <string name="buttonVirgule">,</string>
    <string name="buttonEgale">=</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>