<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.classique.ClassiqueFragment"
    android:orientation="horizontal"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="bottom">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/result"
            android:text="Result"
            android:textSize="20dp"
            android:layout_gravity="bottom"
            android:background="@color/black"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/calcul"
            android:text=""
            android:textSize="20dp"
            android:layout_gravity="bottom"
            android:background="@color/black"
            android:textColor="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom"
            android:background="@color/black">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="bottom"
                android:layout_weight="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/buttonAC"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_marginLeft="4dp"
                            android:text="@string/buttonAC"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/grey"
                            android:textColor="@color/black"/>
                        <Button
                            android:id="@+id/button7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_marginLeft="4dp"
                            android:text="@string/button7"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/black"/>
                        <Button
                            android:id="@+id/button4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_marginLeft="4dp"
                            android:text="@string/button4"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/black"/>
                        <Button
                            android:id="@+id/button1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_marginLeft="4dp"
                            android:text="@string/button1"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/black"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="bottom|center"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/buttonParentheseDebut"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_marginLeft="4dp"
                            android:text="@string/buttonParentheseDebut"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/grey"
                            android:textColor="@color/black"/>
                        <Button
                            android:id="@+id/button8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_marginLeft="4dp"
                            android:text="@string/button8"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/black"/>
                        <Button
                            android:id="@+id/button5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_marginLeft="4dp"
                            android:text="@string/button5"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/black"/>
                        <Button
                            android:id="@+id/button2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_marginLeft="4dp"
                            android:text="@string/button2"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="1"
                        android:layout_gravity="bottom">

                        <Button
                            android:id="@+id/buttonParentheseFin"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_marginLeft="4dp"
                            android:text="@string/buttonParentheseFin"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/grey"
                            android:textColor="@color/black"/>
                        <Button
                            android:id="@+id/button9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_marginLeft="4dp"
                            android:text="@string/button9"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/black"/>
                        <Button
                            android:id="@+id/button6"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_marginLeft="4dp"
                            android:text="@string/button6"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/black"/>
                        <Button
                            android:id="@+id/button3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="4dp"
                            android:layout_marginLeft="4dp"
                            android:text="@string/button3"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/black"/>

                    </LinearLayout>

                </LinearLayout>





                <Button
                    android:id="@+id/button0"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/button0"
                    android:backgroundTint="@color/white"
                    android:textColor="@color/black"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="bottom">

                <Button
                    android:id="@+id/buttonBack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/buttonBack"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/red"/>
                <Button
                    android:id="@+id/buttonDivision"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/buttonDivision"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/orange"/>
                <Button
                    android:id="@+id/buttonMultiplication"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/buttonMultiplication"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/orange"/>
                <Button
                    android:id="@+id/buttonSoustraction"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/buttonSoustraction"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/orange"/>
                <Button
                    android:id="@+id/buttonAddition"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/buttonAddition"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/orange"/>
                <Button
                    android:id="@+id/buttonEgale"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="@string/buttonEgale"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/orange"/>

            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>